@@ -3,18 +3,16 @@ Hash: SHA512
 
 DIST twython-1.2-README.markdown 2759 RMD160 a6973c50c1d9cdbe8ac212319e92d57418ce97a2 SHA1 dabb7b84c39f18c4bd784d0bac7a6997f80691e4 SHA256 62242e262ed6c629afbb9d4115797be9eee48e3551427a0935bfc470b48aefe4
 DIST twython-1.2.tar.gz 24278 RMD160 71507f84d00762b0408af0ba21b95af0e5fb82bc SHA1 16f95e5d78af62154325a81db28e708b4e3e73de SHA256 26d5cfadb0d70330bb7049cbb05bef0a88a20e9c87537d467aa572302ba4b0f7
-DIST twython-1.4.2.tar.gz 19544 RMD160 ec1f644a7054c6673eeaa7630b95490d0554e22c SHA1 67f3b2c0e6d6631c613623af388584d6a7b828b9 SHA256 701d3965df5208c6b16abbce23110fa2db54defcf8dd99d14203a0600cefc7e4
 DIST twython-1.4.3.tar.gz 19702 RMD160 e98ce33a0233d2c6ab9e6520ffbea09ac4e69d94 SHA1 1d8d663896914081cf264af6fdf89b5af8a9cbbf SHA256 371839ba31f2284f849892ce7d3c6e4636760864db2b3bce85b1ef0576eeb079
 EBUILD twython-1.2.ebuild 819 RMD160 5ba9cdde1013c048d05c322752c6c51023561ac1 SHA1 f162df944258a8aba998c279189de5d9b44e8b7e SHA256 39b970cdde7e844f1c2ff2a4c1d2b53e0ae079e21e6ea1ee89e6b7d20d336064
-EBUILD twython-1.4.2.ebuild 921 RMD160 6ecc1176e87d1dd1b54322a02aa1a5f9535bce65 SHA1 7f4311250c090ee86205be1402f2ae39960c5c15 SHA256 257c49e094fceaf059e4c18b2686f5a117b299adcb8d20fe454409e5dbf5e96a
 EBUILD twython-1.4.3.ebuild 921 RMD160 6ecc1176e87d1dd1b54322a02aa1a5f9535bce65 SHA1 7f4311250c090ee86205be1402f2ae39960c5c15 SHA256 257c49e094fceaf059e4c18b2686f5a117b299adcb8d20fe454409e5dbf5e96a
-MISC ChangeLog 1951 RMD160 10b3515ec7d7b37430dc7fb10a8de94881fb1bd6 SHA1 b378c76979bbd903996f109b4423fb5811a8b55e SHA256 c3557712fd0cb41a5eecd5fccc8661d699e464dc66228b093fa6e30eea306974
+MISC ChangeLog 2047 RMD160 70c591009d69abf111585f012646a76d1be54ce5 SHA1 60fdc02af71af93bc7d9fb222954c0579fab44fa SHA256 0055ca0b063839192c1ed21d37f119c8ba1525a3ed282bd6a1b96dcfcbdace8b
 MISC metadata.xml 1009 RMD160 3a1401d7285362319c29524023d9afc976d61d2a SHA1 b5d6359dce0d99943547074e8d771481d24caf7e SHA256 1bf67d0f7db54fe9ad505d6ba7155100f86f1f0d1e50574a57896b95cd7c5e17
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk5Nb7IACgkQzJrj3cAXR0nLBgCfWGzGpVy4dnu676/vEbmH2+q8
-73IAoI5cdQOq/wThrZCNN9LTY3SPS2R+
-=5FWI
+iEYEAREKAAYFAk6bzmMACgkQzJrj3cAXR0kdewCeIawkkTAW0U/lQrKb2t2n2MUp
+R/4AnjX5NxQ1SaJz/8ltTqY0ru0AqeQN
+=mWaa
 -----END PGP SIGNATURE-----
