@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Oct 2011; James Rowe <jnrowe@gmail.com> -twython-1.4.2.ebuild:
+  Removed obsolete ebuild.
+
 *twython-1.4.3 (18 Aug 2011)
 
   18 Aug 2011; James Rowe <jnrowe@gmail.com> +twython-1.4.3.ebuild:
